research and resume

--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
         <div data-include="./sidebar.html"></div>
 
         <!-- Main Content Area -->
-        <div class="main-content">
+        <div class="about">
             <h2>About Me</h2>
             <p>Hi there! I am Razin. 
-                Currently working as an adjunct lecturer at the <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, <a href="https://www.buet.ac.bd/web/#/">Bangladesh University of Engineering and Technology (BUET)</a>. 
+                Currently working as an adjunct lecturer at the <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, 
+                <a href="https://www.buet.ac.bd/web/#/">Bangladesh University of Engineering and Technology (BUET)</a>. 
                 I completed my undergraduate degree in the same department in July 2024 with a CGPA of 3.93/4.00. 
                 <br><br>
-                I am interested in everything related to Graphics, Visualization, Machine Learning, and Deep Learning. I plan to do research in these fields. 
-                In my spare time, I build simulations and visualizations of things I find interesting. More about it in the <a href="./projects.html">Projects</a> tab.
-                <br><br>
-                
+                <!-- I am interested in everything related to Graphics, Visualization, Machine Learning, and Deep Learning. I plan to do research in these fields. 
+                In my spare time, I build simulations and visualizations of things I find interesting. More about it in the <a href="./projects.html">Projects</a> tab. -->
+                <!-- <br><br> -->
+                Ever since I started programming, I always got a kick out of putting it in code everytime I learned something new. 
+                It was always fun to see my own simulations in my computer screen. That is why I 
             </p>
         </div>
     </div>
