--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <div data-include="sidebar.html"></div>
         <div class="main-content">
             
-            <h2>Projects</h2>
+            <h2><span class="icon-box"><i class="fas fa-code"></i></span> Projects</h2>
             <div id="projects-container" class="cards"></div>
 
         </div>
