--- a/index.html
+++ b/index.html
@@ -45,16 +45,39 @@
         <!-- Main Content Area -->
         <div class="about">
             <h2>About Me</h2>
-            <p>Hi there! I am Razin. 
-                Currently working as an adjunct lecturer at the <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, 
-                <a href="https://www.buet.ac.bd/web/#/">Bangladesh University of Engineering and Technology (BUET)</a>. 
-                I completed my undergraduate degree in the same department in July 2024 with a CGPA of 3.93/4.00. 
+            <p>
+                Hi everyone! I am Razin and I teach people Computer Science at the same university I graduated from! <br> 
+                Yes, right now, I am an adjunct lecturer at the <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, 
+                <a href="https://www.buet.ac.bd/web/#/">BUET</a>. 
+                I completed my undergraduate degree in July 2024 with a <b>CGPA of 3.93/4.00</b>. Not too shabby, right?
                 <br><br>
+
                 <!-- I am interested in everything related to Graphics, Visualization, Machine Learning, and Deep Learning. I plan to do research in these fields. 
                 In my spare time, I build simulations and visualizations of things I find interesting. More about it in the <a href="./projects.html">Projects</a> tab. -->
                 <!-- <br><br> -->
-                Ever since I started programming, I always got a kick out of putting it in code everytime I learned something new. 
-                It was always fun to see my own simulations in my computer screen. That is why I 
+
+                Ever since I started programming, I always get a kick out of turning every new thing I learn into code. 
+                It's always fun watching my own little simulations in my computer screen. Helps me learn better too, as I am a visual learner. 
+                LissaJous curves, fractals, Fourier series, you name it. 
+                Those are the reasons why I am interested in everything related to <b>Graphics</b> and <b>Visualization</b>. 
+                You can take a look at some of my projects in the <a href="./projects.html">Projects</a> tab.
+                <br><br>
+
+                I also have a keen interest in <b>Machine Learning</b> and <b>Deep Learning</b>. 
+                The fact that simple weight matrices can do wonders in recognizing patterns and learning features is mind-blowing!
+                <!-- The first time I learned about GANs, I was blown away by the concept of fooling the discriminator while it gets better at distinguishing real from fake.  -->
+                When I first learned about GANs, I was blown away by how they fool the discriminator while it gets better at spotting what's real and what's fake. 
+                The intuition behind other models like VAEs, CNNs, LSTMs are also deeply fascinating! <br>
+                Right now, I am <b>learning Reinforcement Learning</b> to make my own autonomous agents.
+                <br><br>
+
+                 A short overview of my <b><i>research experience</i></b>: I have experience building a deep learning model 
+                 to predict earthquake intensity with only 3 seconds of seismograms as my undergraduate thesis. 
+                 I also have experience collecting physiological data from more than 40 rickshaw-pullers 
+                 using more than 7 sensors to analyze the impacts of heat exposure on them. More about it in the <a href="./research.html">Research</a> tab. 
+                 <br><br>
+
+                 
             </p>
         </div>
     </div>
