--- a/navbar.html
+++ b/navbar.html
@@ -4,6 +4,6 @@
         <li><a href="./research.html">Research</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <!-- <li><a href="./contact.html">Contact</a></li> -->
     </ul>
 </nav>
