--- a/sidebar.html
+++ b/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <img src="./assets/img/Razin Reaz Abedin portfolio.jpg" alt="Razin Reaz Abedin">
     <h1>Razin Reaz Abedin</h1>
-    <p>I'm a coder, musician, and gamer. Let's connect!</p>
+    <p>Lecturer, Coder, Musician, Gamer</p>
 
     <!-- Social Media Links -->
     <div class="social-links">
