--- a/index.html
+++ b/index.html
@@ -49,34 +49,39 @@
                 Hi everyone! I am Razin and I teach people Computer Science at the same university I graduated from! <br> 
                 Yes, right now, I am an adjunct lecturer at the <a href="https://cse.buet.ac.bd/">Department of Computer Science and Engineering</a>, 
                 <a href="https://www.buet.ac.bd/web/#/">BUET</a>. 
-                I completed my undergraduate degree in July 2024 with a <b>CGPA of 3.93/4.00</b>. Not too shabby, right?
+                I completed my undergraduate degree in July 2024 with a <b>CGPA of 3.93/4.00</b>. Looks like all those sleepless nights paid off!
                 <br><br>
 
                 <!-- I am interested in everything related to Graphics, Visualization, Machine Learning, and Deep Learning. I plan to do research in these fields. 
                 In my spare time, I build simulations and visualizations of things I find interesting. More about it in the <a href="./projects.html">Projects</a> tab. -->
                 <!-- <br><br> -->
 
+                My research interests lies in <b>Graphics</b>, <b>Visualization</b>, <b>Computer Vision</b>, and <b>Reinforcement Learning</b>.
+
                 Ever since I started programming, I always get a kick out of turning every new thing I learn into code. 
-                It's always fun watching my own little simulations in my computer screen. Helps me learn better too, as I am a visual learner. 
+                It's always fun watching my own little simulations in my computer screen. 
                 LissaJous curves, fractals, Fourier series, you name it. 
-                Those are the reasons why I am interested in everything related to <b>Graphics</b> and <b>Visualization</b>. 
+                Helps me learn better too, as I am a visual learner. 
+                <!-- Those are the reasons why I am interested in everything related to <b>Graphics</b> and <b>Visualization</b>.  -->
                 You can take a look at some of my projects in the <a href="./projects.html">Projects</a> tab.
                 <br><br>
 
-                I also have a keen interest in <b>Machine Learning</b> and <b>Deep Learning</b>. 
+                I also have a keen interest in Machine Learning and Deep learning. 
                 The fact that simple weight matrices can do wonders in recognizing patterns and learning features is mind-blowing!
                 <!-- The first time I learned about GANs, I was blown away by the concept of fooling the discriminator while it gets better at distinguishing real from fake.  -->
                 When I first learned about GANs, I was blown away by how they fool the discriminator while it gets better at spotting what's real and what's fake. 
-                The intuition behind other models like VAEs, CNNs, LSTMs are also deeply fascinating! <br>
-                Right now, I am <b>learning Reinforcement Learning</b> to make my own autonomous agents.
+                The intuition behind other models like VAEs, CNNs, LSTMs are also deeply fascinating! I am especiallly interested in
+                explaining the inner workings of a machine learning model visually.<br>
+                <!-- Right now, I am <b>learning Reinforcement Learning</b> to make my own autonomous agents. -->
                 <br><br>
 
-                 A short overview of my <b><i>research experience</i></b>: I have experience building a deep learning model 
-                 to predict earthquake intensity with only 3 seconds of seismograms as my undergraduate thesis. 
-                 I also have experience collecting physiological data from more than 40 rickshaw-pullers 
-                 using more than 7 sensors to analyze the impacts of heat exposure on them. More about it in the <a href="./research.html">Research</a> tab. 
-                 <br><br>
-
+                A short overview of my <b><i>research experience</i></b>: I have experience building a deep learning model 
+                to predict earthquake intensity with only 3 seconds of seismograms as my undergraduate thesis. 
+                I also have experience collecting physiological data from more than 40 rickshaw-pullers 
+                using more than 7 sensors to analyze the impacts of heat exposure on them. More about it in the <a href="./research.html">Research</a> tab. 
+                <br><br>
+                
+                For more information about me that is totally not unsolicited, check out <a href="./more.html">this page</a>.
                  
             </p>
         </div>
