--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         }
 
         document.addEventListener('DOMContentLoaded', includeHTML);
+
     </script>
+    <script src="scripts/navbar.js"></script>
 </head>
 <body>
 
