--- a/more.html
+++ b/more.html
@@ -49,7 +49,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://itch.io/jam/buet-cse-fest-2023-game-jam/results" target="_blank">
-                        <img src="./assets/more/gamejam1.jpg" alt="Game Jam BUET CSE Fest 2023 " class="video-thumbnail">
+                        <img src="./assets/more/gamejam1.jpg" alt="Game Jam BUET CSE Fest 2023 " class="thumbnail">
                         </a>
                     </div>
                     <p><br>I co-led the Inter University Game Jam event of BUET CSE Fest 2023!</p>
@@ -57,7 +57,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://www.youtube.com/watch?v=Os5yeavDblk&t=555" target="_blank">
-                        <img src="./assets/more/localoca.JPG" alt="Flash Mob 2023" class="video-thumbnail">
+                        <img src="./assets/more/localoca.JPG" alt="Flash Mob 2023" class="thumbnail">
                         </a>
                     </div>
                     <p><br>Danced with tons of enthusiastic people to Loca Loca!</p>
@@ -66,7 +66,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://www.instagram.com/olokkho/" target="_blank">
-                        <img src="./assets/more/olokkho2.jpg" alt="instagram" class="video-thumbnail">
+                        <img src="./assets/more/olokkho2.jpg" alt="instagram" class="thumbnail">
                         </a>
                     <p><br>I like to take photographs. Here is my instagram!</p>
                     </div>
@@ -75,7 +75,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://www.youtube.com/watch?v=WaajOqOC4PA" target="_blank">
-                        <img src="https://img.youtube.com/vi/WaajOqOC4PA/hqdefault.jpg" alt="" class="video-thumbnail">
+                        <img src="https://img.youtube.com/vi/WaajOqOC4PA/hqdefault.jpg" alt="" class="thumbnail">
                         </a>
                     </div>
                     <p><br>I was part of a Rock Band called Return Zero!</p>
@@ -84,7 +84,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://youtu.be/3Y7SQm_T_yk?si=irw04tRECtbqA6im" target="_blank">
-                        <img src="https://img.youtube.com/vi/3Y7SQm_T_yk/hqdefault.jpg" alt="The Zombies" class="video-thumbnail">
+                        <img src="https://img.youtube.com/vi/3Y7SQm_T_yk/hqdefault.jpg" alt="The Zombies" class="thumbnail">
                         </a>
                     </div>
                     <p><br>Our class was named "The Zombies" After this dance performance of Thriller and Everybody!</p>
@@ -93,7 +93,7 @@
                 <div class="link-card">
                     <div class="video-container">
                         <a href="https://www.youtube.com/watch?v=0ENVNEGGTyY" target="_blank">
-                        <img src="https://img.youtube.com/vi/0ENVNEGGTyY/hqdefault.jpg" alt="Hymn for the Weekend Instrumental" class="video-thumbnail">
+                        <img src="https://img.youtube.com/vi/0ENVNEGGTyY/hqdefault.jpg" alt="Hymn for the Weekend Instrumental" class="thumbnail">
                         </a>
                     </div>
                     <p><br>You can't see me but I am playing the Keyboard here with these amazing bunch of musicians!</p>
@@ -102,6 +102,6 @@
         </div>
     </div>
 
-    <!-- <script src="scripts/projects.js"></script> -->
+    <script src="scripts/navbar.js"></script>
 </body>
 </html>
