--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,10 @@
-<nav class="navbar">
+
+<div class="navbar">
+    <div class="menu-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <ul class="nav-list">
         <li><a href="./index.html">About Me</a></li>
         <li><a href="./research.html">Research</a></li>
@@ -8,4 +14,4 @@
         <li><a href="./more.html">More about me</a></li>
         <!-- <li><a href="./contact.html">Contact</a></li> -->
     </ul>
-</nav>
+</div>
