--- a/achievements.html
+++ b/achievements.html
@@ -49,5 +49,6 @@
     </div>
 
     <script src="scripts/achievements.js"></script>
+    <script src="scripts/navbar.js"></script>
 </body>
 </html>
