new project added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 In my spare time, I build simulations and visualizations of things I find interesting. More about it in the <a href="./projects.html">Projects</a> tab. -->
                 <!-- <br><br> -->
 
-                My research interests lies in <b>Graphics</b>, <b>Visualization</b>, <b>Computer Vision</b>, and <b>Reinforcement Learning</b>.
+                My research interests lies in <b>Computer Graphics</b>, <b>Visualization</b>, <b>Computer Vision</b>, and <b>Physically Based Rendering</b>.
 
                 Ever since I started programming, I always get a kick out of turning every new thing I learn into code. 
                 It's always fun watching my own little simulations in my computer screen. 
