--- a/achievements.html
+++ b/achievements.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Razin Reaz Abedin - Projects</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins|Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- FontAwesome for Social Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Script for loading Navbar and Sidebar -->
     <script>
-        function includeHTML() {
-            let elements = document.querySelectorAll('[data-include]');
-            elements.forEach(el => {
-                const file = el.getAttribute('data-include');
-                fetch(file)
-                    .then(response => {
-                        if (!response.ok) throw new Error('Network error');
-                        return response.text();
-                    })
-                    .then(data => el.innerHTML = data)
-                    .catch(() => el.innerHTML = 'Error loading the content');
-            });
-        }
+      function includeHTML() {
+        let elements = document.querySelectorAll("[data-include]");
+        elements.forEach((el) => {
+          const file = el.getAttribute("data-include");
+          fetch(file)
+            .then((response) => {
+              if (!response.ok) throw new Error("Network error");
+              return response.text();
+            })
+            .then((data) => (el.innerHTML = data))
+            .catch(() => (el.innerHTML = "Error loading the content"));
+        });
+      }
 
-        document.addEventListener('DOMContentLoaded', includeHTML);
+      document.addEventListener("DOMContentLoaded", includeHTML);
     </script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- Top Navigation Bar (Will be included via JS) -->
     <div data-include="navbar.html"></div>
 
     <div class="container">
-
-        <div data-include="sidebar.html"></div>
-        <div class="main-content">
-            <h2><span class="icon-box"><i class="fas fa-trophy"></i></span> Achievements</h2>
-            <div id="achievements-container" class="cards"></div>
-
-        </div>
+      <div data-include="sidebar.html"></div>
+      <div class="main-content">
+        <h2>
+          <span class="icon-box"><i class="fas fa-trophy"></i></span>
+          Achievements
+        </h2>
+        <div id="achievements-container" class="cards"></div>
+      </div>
     </div>
 
     <script src="scripts/achievements.js"></script>
     <script src="scripts/navbar.js"></script>
-</body>
+  </body>
 </html>
