--- a/research.html
+++ b/research.html
@@ -1,85 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Razin Reaz Abedin - Research</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins|Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- FontAwesome for Social Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Script for loading Navbar and Sidebar -->
     <script>
-        function includeHTML() {
-            let elements = document.querySelectorAll('[data-include]');
-            elements.forEach(el => {
-                const file = el.getAttribute('data-include');
-                fetch(file)
-                    .then(response => {
-                        if (!response.ok) throw new Error('Network error');
-                        return response.text();
-                    })
-                    .then(data => el.innerHTML = data)
-                    .catch(() => el.innerHTML = 'Error loading the content');
-            });
-        }
+      function includeHTML() {
+        let elements = document.querySelectorAll("[data-include]");
+        elements.forEach((el) => {
+          const file = el.getAttribute("data-include");
+          fetch(file)
+            .then((response) => {
+              if (!response.ok) throw new Error("Network error");
+              return response.text();
+            })
+            .then((data) => (el.innerHTML = data))
+            .catch(() => (el.innerHTML = "Error loading the content"));
+        });
+      }
 
-        document.addEventListener('DOMContentLoaded', includeHTML);
+      document.addEventListener("DOMContentLoaded", includeHTML);
     </script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div data-include="navbar.html"></div>
 
     <div class="container">
-
-        <div data-include="sidebar.html"></div>
-        <div class="main-content">
-            <div class="research">
-                <h2><span class="icon-box"><i class="fas fa-book"></i></span>  Research Experience</h2>
-                <div class="timeline-item">
-                    <div class="timeline-circle"></div>
-                    <div class="timeline-title">
-                        <h3>Enhancing Earthquake Early Warning: Real‑time Seismic Intensity Prediction with Contrastive
-Learning and DenseLoss</h3>
-                        <p class="timeline-duration">February 2024 - Present</p>
-                        <p class="timeline-category">Deep Learning</p>
-                        <p class="timeline-description">
-                        Development of a deep learning model to predict peak ground acceleration (and earthquake intensity) by analyzing
-                        the first 3 seconds of the p‑phase in seismograms under the supervision of <a href="https://sites.google.com/site/mohammedeunusali/
-                        ">Dr. Mohammed Eunus Ali</a>. 
-                        The model uses train‑time data augmentation to generate partial waves and employs a self‑supervised contrastive learning approach to align partial waves with the full waveform in
-                        the embedding space. 
-                        To address the dataset’s imbalance in large‑magnitude earthquakes, SMOTER (SMOTE for
-                        regression) and a density‑based sample loss weighing scheme were applied.
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-circle"></div>
-                    <div class="timeline-title">
-                        <h3>Analyzing Impacts on the Physiological Aspects of Rickshaw‑pullers due to Heat Exposure</h3>
-                        <p class="timeline-duration">November 2022 - Present</p>
-                        <p class="timeline-category">Human Computer Interaction</p>
-                        <p class="timeline-description">
-                        Dataset preparation of the physiological aspects and environmental factors of Bangladeshi Rickshaw Pullers. 
-                        Supervised by <a href="https://cse.buet.ac.bd/faculty/faculty_detail/razi">Dr. A. B. M. Alim Al Islam</a>. 
-                        Collect skin temperature, electrodermal activity(EDA), pulse rate variability, EEG data, etc. as physiological aspects and 
-                        environmental temperature, relative humidity, dust particle amount, pollution levels, etc. as 
-                        environmental data. Accumulated data of over 40 rickshaw pullers, each having more than 20 minutes of data. 
-                        </p>
-                    </div>
-                </div>
+      <div data-include="sidebar.html"></div>
+      <div class="main-content">
+        <div class="research">
+          <h2>
+            <span class="icon-box"><i class="fas fa-book"></i></span> Research
+            Experience
+          </h2>
+          <div class="timeline-item">
+            <div class="timeline-circle"></div>
+            <div class="timeline-title">
+              <h3>
+                Enhancing Earthquake Early Warning: Real‑time Seismic Intensity
+                Prediction with Contrastive Learning and DenseLoss
+              </h3>
+              <p class="timeline-duration">February 2024 - Present</p>
+              <!-- <p class="timeline-category">Deep Learning</p> -->
+              <p class="timeline-description">
+                Development of a deep learning model to predict peak ground
+                acceleration (and earthquake intensity) by analyzing the first 3
+                seconds of the p‑phase in seismograms under the supervision of
+                <a
+                  href="https://sites.google.com/site/mohammedeunusali/
+                        "
+                  >Dr. Mohammed Eunus Ali</a
+                >. The model uses train‑time data augmentation to generate
+                partial waves and employs a self‑supervised contrastive learning
+                approach to align partial waves with the full waveform in the
+                embedding space. To address the dataset’s imbalance in
+                large‑magnitude earthquakes, SMOTER (SMOTE for regression) and a
+                density‑based sample loss weighing scheme were applied.
+              </p>
             </div>
-
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-circle"></div>
+            <div class="timeline-title">
+              <h3>
+                Analyzing Impacts on the Physiological Aspects of
+                Rickshaw‑pullers due to Heat Exposure
+              </h3>
+              <p class="timeline-duration">November 2022 - Present</p>
+              <!-- <p class="timeline-category">Human Computer Interaction</p> -->
+              <p class="timeline-description">
+                Dataset preparation of the physiological aspects and
+                environmental factors of Bangladeshi Rickshaw Pullers.
+                Supervised by
+                <a href="https://cse.buet.ac.bd/faculty/faculty_detail/razi"
+                  >Dr. A. B. M. Alim Al Islam</a
+                >. Collect skin temperature, electrodermal activity(EDA), pulse
+                rate variability, EEG data, etc. as physiological aspects and
+                environmental temperature, relative humidity, dust particle
+                amount, pollution levels, etc. as environmental data.
+                Accumulated data of over 50 rickshaw pullers, each having more
+                than 20 minutes of data.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <script src="scripts/navbar.js"></script>
-</body>
+  </body>
 </html>
