publication, more about me modified

--- a/more.html
+++ b/more.html
@@ -166,6 +166,24 @@
               these amazing bunch of musicians!
             </p>
           </div>
+
+          <div class="link-card">
+            <div class="video-container">
+              <a
+                href="https://www.youtube.com/watch?v=JSP3lsmvgtE"
+                target="_blank"
+              >
+                <img
+                  src="https://img.youtube.com/vi/JSP3lsmvgtE/hqdefault.jpg"
+                  alt="Priyo Prangon"
+                  class="thumbnail"
+                />
+              </a>
+            </div>
+            <p>
+              <br />I co-composed, sang, and edited this stop motion music video commemorating my college days.
+            </p>
+          </div>
         </div>
       </div>
     </div>
