--- a/research.html
+++ b/research.html
@@ -45,21 +45,41 @@
     <div class="container">
       <div data-include="sidebar.html"></div>
       <div class="main-content">
-        <div class="research">
           <h2>
-            <span class="icon-box"><i class="fas fa-book"></i></span> Research
-            Experience
+            <span class="icon-box"><i class="fas fa-book"></i></span> Publications
           </h2>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="publication-title">
+              <h3>
+                Short Paper: "It’s Too Hot Under the Sun": Unveiling the Impact
+                of Prolonged Heat Exposure on Rickshaw Pullers’ Brainwaves
+              </h3>
+              <p class="publication-conference">
+                <a href="https://dl.acm.org/doi/proceedings/10.1145/3704522">NSysS '24: Proceedings of the 11th International Conference on Networking, Systems, and Security</a>, 
+                January 2025
+              </p>
+              <p class="publication-authors">
+                Maoyejatun Hasana, Masfiqur Rahaman, <b>Razin Reaz Abedin</b>, Md Toki Tahmid, Ishika Tarin, Sudipa Saha, Sutapa Dey Tithi, Zarin Tasnim Promi, Kazi Abdun Noor, MD Zahidul Islam Sanjid, Mahir Shahriar Dhrubo, Samira Akter, Tauhidur Rahman, A. B. M. Alim Al Islam
+              </p>
+              <a href="https://dl.acm.org/doi/10.1145/3704522.3704556" class="publication-button">Paper</a>              
+            </div>
+          </div>
+
+          <br /><br /><br />
+          <h2>
+            <span class="icon-box"><i class="fas fa-book"></i></span> Research Experience
+          </h2>
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>
                 Enhancing Earthquake Early Warning: Real‑time Seismic Intensity
                 Prediction with Contrastive Learning and DenseLoss
               </h3>
-              <p class="timeline-duration">February 2024 - Present</p>
-              <!-- <p class="timeline-category">Deep Learning</p> -->
-              <p class="timeline-description">
+              <!-- <p class="experience-duration">February 2024 - Present</p> -->
+              <!-- <p class="experience-category">Deep Learning</p> -->
+              <p class="experience-description">
                 Development of a deep learning model to predict peak ground
                 acceleration (and earthquake intensity) by analyzing the first 3
                 seconds of the p‑phase in seismograms under the supervision of
@@ -76,16 +96,17 @@
               </p>
             </div>
           </div>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+        
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>
                 Analyzing Impacts on the Physiological Aspects of
                 Rickshaw‑pullers due to Heat Exposure
               </h3>
-              <p class="timeline-duration">November 2022 - Present</p>
-              <!-- <p class="timeline-category">Human Computer Interaction</p> -->
-              <p class="timeline-description">
+              <!-- <p class="experience-duration">November 2022 - Present</p> -->
+              <!-- <p class="experience-category">Human Computer Interaction</p> -->
+              <p class="experience-description">
                 Dataset preparation of the physiological aspects and
                 environmental factors of Bangladeshi Rickshaw Pullers.
                 Supervised by
@@ -100,7 +121,6 @@
               </p>
             </div>
           </div>
-        </div>
       </div>
     </div>
     <script src="scripts/navbar.js"></script>
