--- a/resume.html
+++ b/resume.html
@@ -47,15 +47,15 @@
       <div class="main-content">
         <div class="Job">
           <h2>Job Experience</h2>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>Adjunct Lecturer</h3>
-              <p class="timeline-category">
+              <p class="experience-category">
                 Department of Computer Science and Engineering, BUET
               </p>
-              <p class="timeline-duration">August 2024 - Present</p>
-              <ul class="timeline-description">
+              <p class="experience-duration">August 2024 - Present</p>
+              <ul class="experience-description">
                 <li>
                   Course Instructor: Introduction to Programming. Experienced in
                   giving lectures about introductory Python.
@@ -75,15 +75,15 @@
 
         <div class="Education">
           <h2>Education</h2>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>B.Sc. in Computer Science and Engineering</h3>
-              <p class="timeline-category">
+              <p class="experience-category">
                 Bangladesh University of Engineering and Technology (BUET)
               </p>
-              <p class="timeline-duration">April 2019 - July 2024</p>
-              <p class="timeline-description">
+              <p class="experience-duration">April 2019 - July 2024</p>
+              <p class="experience-description">
                 <b>CGPA: 3.93/4.00</b>
                 <br />
                 Notable Courses: Machine Learning, Simulation and Modelling,
@@ -94,28 +94,28 @@
               </p>
             </div>
           </div>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>Higher Secondary Certificate</h3>
-              <p class="timeline-category">
+              <p class="experience-category">
                 Bir Shreshtha Noor Mohammad Public College
               </p>
-              <p class="timeline-duration">2016 - 2018</p>
-              <p class="timeline-description">
+              <p class="experience-duration">2016 - 2018</p>
+              <p class="experience-description">
                 <b>GPA: 5.00/5.00</b>
               </p>
             </div>
           </div>
-          <div class="timeline-item">
-            <div class="timeline-circle"></div>
-            <div class="timeline-title">
+          <div class="experience-item">
+            <div class="experience-circle"></div>
+            <div class="experience-title">
               <h3>Secondary Secondary Certificate</h3>
-              <p class="timeline-category">
+              <p class="experience-category">
                 Bir Shreshtha Noor Mohammad Public College
               </p>
-              <p class="timeline-duration">2016 - 2016</p>
-              <p class="timeline-description">
+              <p class="experience-duration">2016 - 2016</p>
+              <p class="experience-description">
                 <b>GPA: 5.00/5.00</b>
               </p>
             </div>
