--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Razin Reaz Abedin - Projects</title>
+    <title>Razin - Projects</title>
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins|Roboto:wght@300;500&display=swap"
@@ -17,7 +17,7 @@
     />
 
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/all.css" />
 
     <!-- Script for loading Navbar and Sidebar -->
     <script>
@@ -44,16 +44,19 @@
     <div data-include="navbar.html"></div>
 
     <div class="container">
-      <div data-include="sidebar.html"></div>
+      <!-- <div id="sidebar-container"></div> --> <!-- for caching the sidebar -->
+      <div data-include="./sidebar.html" class="sidebar"></div>
       <div class="main-content">
-        <h2>
+        <h3>
           <span class="icon-box"><i class="fas fa-code"></i></span> Projects
-        </h2>
+        </h3>
         <div id="projects-container" class="cards"></div>
       </div>
     </div>
-
+    
     <script src="scripts/projects.js"></script>
     <script src="scripts/navbar.js"></script>
+    <script src="scripts/sidebar.js"></script>
   </body>
-</html>
+  </html>
+  
