--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Razin Reaz Abedin - Research</title>
+    <title>Razin - Research</title>
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins|Roboto:wght@300;500&display=swap"
@@ -17,7 +17,7 @@
     />
 
     <!-- Link to external CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/all.css" />
 
     <!-- Script for loading Navbar and Sidebar -->
     <script>
@@ -43,86 +43,91 @@
     <div data-include="navbar.html"></div>
 
     <div class="container">
-      <div data-include="sidebar.html"></div>
+      <!-- <div id="sidebar-container"></div> --> <!-- for caching the sidebar -->
+      <div data-include="./sidebar.html" class="sidebar"></div>
       <div class="main-content">
-          <h2>
-            <span class="icon-box"><i class="fas fa-book"></i></span> Publications
-          </h2>
-          <div class="experience-item">
-            <div class="experience-circle"></div>
-            <div class="publication-title">
-              <h3>
-                Short Paper: "It’s Too Hot Under the Sun": Unveiling the Impact
-                of Prolonged Heat Exposure on Rickshaw Pullers’ Brainwaves
-              </h3>
-              <p class="publication-conference">
-                <a href="https://dl.acm.org/doi/proceedings/10.1145/3704522">NSysS '24: Proceedings of the 11th International Conference on Networking, Systems, and Security</a>, 
-                January 2025
-              </p>
-              <p class="publication-authors">
-                Maoyejatun Hasana, Masfiqur Rahaman, <b>Razin Reaz Abedin</b>, Md Toki Tahmid, Ishika Tarin, Sudipa Saha, Sutapa Dey Tithi, Zarin Tasnim Promi, Kazi Abdun Noor, MD Zahidul Islam Sanjid, Mahir Shahriar Dhrubo, Samira Akter, Tauhidur Rahman, A. B. M. Alim Al Islam
-              </p>
-              <a href="https://dl.acm.org/doi/10.1145/3704522.3704556" class="publication-button">Paper</a>              
-            </div>
+        <h3>
+          <span class="icon-box"><i class="fas fa-book"></i></span> Publications
+        </h3>
+        <div class="experience-item">
+          <div class="experience-circle"></div>
+          <div class="publication-title">
+            Short Paper: "It’s Too Hot Under the Sun": Unveiling the Impact of
+            Prolonged Heat Exposure on Rickshaw Pullers’ Brainwaves
           </div>
+          <div class="publication-conference">
+            <a href="https://dl.acm.org/doi/proceedings/10.1145/3704522"
+              >NSysS '24: Proceedings of the 11th International Conference on
+              Networking, Systems, and Security</a
+            >
+          </div>
+          <div class="publication-date">January 2025</div>
+          <div class="publication-authors">
+            Maoyejatun Hasana, Masfiqur Rahaman, <b>Razin Reaz Abedin</b>, Md
+            Toki Tahmid, Ishika Tarin, Sudipa Saha, Sutapa Dey Tithi, Zarin
+            Tasnim Promi, Kazi Abdun Noor, MD Zahidul Islam Sanjid, Mahir
+            Shahriar Dhrubo, Samira Akter, Tauhidur Rahman, A. B. M. Alim Al
+            Islam
+          </div>
+          <a
+            href="https://dl.acm.org/doi/10.1145/3704522.3704556"
+            class="publication-button"
+            >Paper</a
+          >
+          <a
+            href="https://dl.acm.org/doi/pdf/10.1145/3704522.3704556"
+            class="publication-button"
+            >PDF</a
+          >
+        </div>
 
-          <br /><br /><br />
-          <h2>
-            <span class="icon-box"><i class="fas fa-book"></i></span> Research Experience
-          </h2>
-          <div class="experience-item">
-            <div class="experience-circle"></div>
-            <div class="experience-title">
-              <h3>
-                Enhancing Earthquake Early Warning: Real‑time Seismic Intensity
-                Prediction with Contrastive Learning and DenseLoss
-              </h3>
-              <!-- <p class="experience-duration">February 2024 - Present</p> -->
-              <!-- <p class="experience-category">Deep Learning</p> -->
-              <p class="experience-description">
-                Development of a deep learning model to predict peak ground
-                acceleration (and earthquake intensity) by analyzing the first 3
-                seconds of the p‑phase in seismograms under the supervision of
-                <a
-                  href="https://sites.google.com/site/mohammedeunusali/
-                        "
-                  >Dr. Mohammed Eunus Ali</a
-                >. The model uses train‑time data augmentation to generate
-                partial waves and employs a self‑supervised contrastive learning
-                approach to align partial waves with the full waveform in the
-                embedding space. To address the dataset’s imbalance in
-                large‑magnitude earthquakes, SMOTER (SMOTE for regression) and a
-                density‑based sample loss weighing scheme were applied.
-              </p>
-            </div>
+        <br /><br /><br />
+        <h3>
+          <span class="icon-box"><i class="fas fa-book"></i></span> Research
+          Experience
+        </h3>
+        <div class="experience-item">
+          <div class="experience-circle"></div>
+          <div class="experience-title">
+            Enhancing Earthquake Early Warning: Real‑time Seismic Intensity
+            Prediction with Contrastive Learning and DenseLoss
           </div>
-        
-          <div class="experience-item">
-            <div class="experience-circle"></div>
-            <div class="experience-title">
-              <h3>
-                Analyzing Impacts on the Physiological Aspects of
-                Rickshaw‑pullers due to Heat Exposure
-              </h3>
-              <!-- <p class="experience-duration">November 2022 - Present</p> -->
-              <!-- <p class="experience-category">Human Computer Interaction</p> -->
-              <p class="experience-description">
-                Dataset preparation of the physiological aspects and
-                environmental factors of Bangladeshi Rickshaw Pullers.
-                Supervised by
-                <a href="https://cse.buet.ac.bd/faculty/faculty_detail/razi"
-                  >Dr. A. B. M. Alim Al Islam</a
-                >. Collect skin temperature, electrodermal activity(EDA), pulse
-                rate variability, EEG data, etc. as physiological aspects and
-                environmental temperature, relative humidity, dust particle
-                amount, pollution levels, etc. as environmental data.
-                Accumulated data of over 50 rickshaw pullers, each having more
-                than 20 minutes of data.
-              </p>
-            </div>
+          <div class="experience-description">
+            Development of a deep learning model to predict peak ground
+            acceleration (and earthquake intensity) by analyzing the first 3
+            seconds of the p‑phase in seismograms under the supervision of
+            <a href="https://sites.google.com/site/mohammedeunusali/"
+              >Dr. Mohammed Eunus Ali</a
+            >. The model uses train‑time data augmentation to generate partial
+            waves and employs a self‑supervised contrastive learning approach to
+            align partial waves with the full waveform in the embedding space.
+            To address the dataset’s imbalance in large‑magnitude earthquakes,
+            SMOTER (SMOTE for regression) and a density‑based sample loss
+            weighing scheme were applied.
           </div>
+        </div>
+        <div class="experience-item">
+          <div class="experience-circle"></div>
+          <div class="experience-title">
+            Analyzing Impacts on the Physiological Aspects of Rickshaw‑pullers
+            due to Heat exposure
+          </div>
+          <div class="experience-description">
+            Dataset preparation of the physiological aspects and environmental
+            factors of Bangladeshi Rickshaw Pullers. Supervised by
+            <a href="https://cse.buet.ac.bd/faculty/faculty_detail/razi"
+              >Dr. A. B. M. Alim Al Islam</a
+            >. Collect skin temperature, electrodermal activity(EDA), pulse rate
+            variability, EEG data, etc. as physiological aspects and
+            environmental temperature, relative humidity, dust particle amount,
+            pollution levels, etc. as environmental data. Accumulated data of
+            over 50 rickshaw pullers, each having more than 20 minutes of data.
+          </div>
+        </div>
       </div>
     </div>
     <script src="scripts/navbar.js"></script>
+    <script src="scripts/sidebar.js"></script>
+
   </body>
 </html>
